src/components/SearchDialog/SearchDialogContent/SearchResults/SearchResults.module.css
.root {
  position: relative;
  padding-block: var(--space-s);
  padding-inline: var(--space-s);
  overflow-y: auto;
  height: 100%;
  max-height: 100%;
  overscroll-behavior: contain;
}

.resultsContainer {
  display: flex;
  flex-direction: column;
  gap: var(--space-s);
}

.resultsContainer .groupSection {
  display: flex;
  flex-direction: column;
  gap: var(--space-3xs);

  .groupTitle {
    display: block;
    padding: 0 var(--space-xs);
    color: var(--color-text-secondary);
    font-size: var(--text-body-xs);
    text-transform: uppercase;
    letter-spacing: 0.5px;
    scroll-margin-top: var(--space-s);
  }
}

.groupSection .resultsList {
  display: flex;
  flex-direction: column;
  row-gap: var(--space-3xs);
  list-style: none;
  padding: 0;
  margin: 0;
}

.hitItem .searchIconWrapper {
  grid-area: icon;
  display: flex;
  width: 46px;
  height: 46px;
  justify-content: center;
  align-items: center;
  gap: 10px;
  border-radius: 100px;
  background: var(--color-background-default);
  color: var(--color-text-secondary);
}

.hitItem .searchIcon {
  width: var(--search-icon-size);
  height: var(--search-icon-size);
  margin: 10px;
  color: inherit;

  & path {
    fill: currentcolor;
  }
}

.resultsList .hitItem {
  display: block;
  border-radius: var(--border-radius-s);
  color: var(--color-text-secondary);

  &:is(:hover, :focus, .resultLinkFocus) {
    outline: none;
    background-color: var(--color-background-default);

    .searchIconWrapper {
      background-color: var(--color-background-hover);
    }
  }
}

.hitItem .resultLink {
  display: grid;
  grid-template:
    'icon content arrow' auto
    '. description .' auto
    / auto 1fr auto;
  column-gap: var(--space-xs);
  padding: var(--space-xs);
  align-items: start;
  color: inherit;
  text-decoration: none;
  border-radius: var(--border-radius-m);

  &:focus {
    outline: none;
  }
}

.hitItem .resultContent {
  grid-area: content;
  display: flex;
  flex-direction: column;
  gap: 2px;
  min-width: 0;
  color: var(--color-text-default);
}

.hitItem .resultTitleRow {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: var(--space-3xs);
  min-width: 0;
}

.hitItem .resultMethodTag {
  margin-top: 1px;
}

.hitItem .resultDescription {
  display: flex;
  gap: var(--space-3xs);
  align-items: center;
  color: var(--color-text-secondary);
  font-size: var(--text-body-xs);
  opacity: 0.75;
}

.resultDescription .resultCategorySeparator {
  height: 12px;
  width: 12px;
  color: inherit;

  & path {
    fill: currentcolor;
  }
}

.hitItem .resultIcon {
  grid-area: arrow;
  width: 16px;
  height: 16px;
  color: var(--color-text-tertiary);
  pointer-events: none;
  align-self: center;

  & path {
    fill: currentcolor;
  }
}

.noResultsContainer {
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: calc(var(--dialog-content-height) - var(--dialog-header-height));
}

.noResults {
  margin: 0;
  padding: var(--space-m);
  color: var(--color-text-tertiary);
  text-align: center;
}

